# portfolio_app

./: README.md  app.py  main.py  master_data.py  pre_defined_answers.py  pyproject.toml  question_set.py  requirements.txt  stored_questions.py
assets/: bio.txt
logic/: llm.py
ui/: chat.py  contact.py  experience.py  resume.py  side_panel.py
