[project]
name = "portfolio-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.31.0",
    "google-generativeai>=0.8.5",
    "numpy>=2.3.2",
    "openai>=1.101.0",
    "requests>=2.32.5",
    "scikit-learn>=1.7.1",
    "streamlit>=1.48.1",
    "streamlit-option-menu>=0.4.0",
]
